--- a/Tema4/practica4.07/src/components/Header.css
+++ b/Tema4/practica4.07/src/components/Header.css
@@ -1,8 +1,24 @@
-/* header.css */
-.header{
-    border: 3px solid white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: darkred;
+  display: flex;
+  align-items: center;          
+  justify-content: center;      
+  gap: 15px;                    
+  color: white;
+  font-size: 26px;
+  letter-spacing: 1px;
+  
+}
+
+
+.header-logo {
+  width: 70px;          
+  height: 70px;
+  object-fit: contain;  
+  border-radius: 8px;  
 }
