--- a/Tema4/practica4.07/src/components/menu/Menu.css
+++ b/Tema4/practica4.07/src/components/menu/Menu.css
@@ -1,19 +1,22 @@
 .menu_completo {
-    width: 100%;
-  background-color: #1e1e2f; 
-  display: flex;             
-  justify-content: center;   
-  gap: 20px;                 
-  padding: 10px 0;           
+  position: fixed;
+  top: 70px;               
+  left: 0;
+  width: 100%;
+  background-color: #500000;
+  display: flex;
+  justify-content: center;    
+  align-items: center;
+  gap: 30px;                  
+  padding: 12px 0;          
 }
 
 .menu {
-    width: 100%;
-  border: 2px solid black;
-  background-color: black;
-  padding: 10px;
-  color: #fff;
   text-decoration: none;
-  font-weight: 500;
-  border-radius: 20px;
+  color: wheat;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  transition: color 0.3s ease, transform 0.2s ease;
 }
+
