practica 5.02 casi acabada

--- a/Tema5/Practica5.02/Ejercicio1/ejercicio1.css
+++ b/Tema5/Practica5.02/Ejercicio1/ejercicio1.css
@@ -10,4 +10,14 @@
     border-radius: 20px;
     padding: 4px;
     margin: 4px;
+    cursor: pointer;
+}
+
+.contenedor_par {
+    background-color: aquamarine;
+    display: none;
+}
+
+.mostrar{
+    display: flex;
 }
