--- a/Tema5/Practica5.03/pintarrajea.css
+++ b/Tema5/Practica5.03/pintarrajea.css
@@ -1,23 +1,24 @@
 #elegirColor{
     width: 50px;
-    height: 30px;
-
+    height: 20px;
 }
 
 .contenedorSeleccionColor{
     display: block;
-    background-color: antiquewhite;
+    background-color:silver;
     padding: 10px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .tabla{
+    border: 4px solid;
     margin: auto;
     border-collapse: collapse;
 }
 
 .tabla td {
-    border: 2px solid;
+    border: 1px solid;
     width: 10px;
     height: 10px;
 
