Puzle casi acabado

--- a/Tema5/Practica5.04/rompecabezas.css
+++ b/Tema5/Practica5.04/rompecabezas.css
@@ -1,6 +1,34 @@
-.contenedor_imagenes{
-    width: 100px;
-    height: 100px;
-    display: flex;
+.div_superior{
+    background: linear-gradient(135deg, #004D98 0%, #A50044 100%);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(5,200px);
+    grid-template-rows: repeat(2,150px);
     gap: 10px;
+    justify-content: center;
+}
+
+.div_superior img {
+    border: 1px solid;
+}
+
+.div_intermedio{
+    margin: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,200px);
+    grid-template-rows: repeat(3,150px);
+    justify-content: center;
+}
+
+.soltable{
+    border: 1px solid;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrastrable{
+    width: 200px;
+    height: 150px;
 }
