--- a/Tema5/Practica5.04/rompecabezas.css
+++ b/Tema5/Practica5.04/rompecabezas.css
@@ -1,3 +1,21 @@
+body{
+    background: linear-gradient(to right, #A50044, #004D98);
+}
+
+#piezas{
+    border: 2px solid;
+    background: linear-gradient(to right, #004D98, #A50044);
+}
+
+#piezas img{
+   width: 200px;
+   height: 150px;
+}
+
+.arrastrable{
+    width: 200px;
+   height: 150px;
+}
 
 #panel_juego{
     margin: 30px;
@@ -9,4 +27,9 @@
 
 #panel_juego div{
     border: 1px solid;
+}
+
+#boton_reinicio{
+    height: 100px;
+    width: 200px;
 }
