--- a/Tema6/Practica6.05/src/components/layout/footer.css
+++ b/Tema6/Practica6.05/src/components/layout/footer.css
@@ -1,18 +1,14 @@
-/* Footer.css */
-
 .footer-container {
-    background-color: #f4f4f4; /* Gris claro */
-    color: #666;               /* Texto gris oscuro */
-    padding: 10px 0;          /* Espaciado interior */
-    text-align: center;         /* Centrar el texto */
-    border-top: 1px solid #ddd; /* Borde superior sutil */
-    
-    /* PROPIEDADES PARA FIJAR LA POSICIÓN */
-    position: fixed;           /* Fija el elemento en relación a la ventana */
-    bottom: 0;                 /* Lo coloca justo en la parte inferior */
-    width: 100%;               /* Asegura que ocupe todo el ancho */
+    background-color: #a3a3a3; 
+    color: #ffffff;      
+    padding: 10px 0;         
+    text-align: center;         
+    border-top: 2px solid #00BCD4;
+    position: fixed;           
+    bottom: 0;                
+    width: 100%;               
     z-index: 999;  
-    left: 0;            /* Asegura que esté por encima del contenido */
+    left: 0;            
 }
 
 .footer-text {
