--- a/webListaCompra/web-lista-compra/src/components/listarProductos.css
+++ b/webListaCompra/web-lista-compra/src/components/listarProductos.css
@@ -63,6 +63,24 @@
   margin-top: 40px;
 }
 
+.botones_producto{
+  display: block;
+}
+
+.boton_borrar{
+  width: 30px;
+  align-self: center;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.boton_editar{
+  width: 35px;
+  align-self: center;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
 /* Tarjeta de Producto (Estilo adaptado a tus .feature-card) */
 .producto {
   background-color: #2a2a2a; /* Mismo gris oscuro que inicio */
@@ -74,8 +92,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  cursor: pointer;
 }
+
+
 
 .producto:hover {
   transform: translateY(-5px);
