--- a/webListaCompra/web-lista-compra/src/components/listarProductos.css
+++ b/webListaCompra/web-lista-compra/src/components/listarProductos.css
@@ -189,3 +189,31 @@
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0, 210, 255, 0.5); 
 }
+
+/* --- Botón Guardar (Estilo llamativo) --- */
+.boton_añadir {
+  margin-top: 20px;
+  padding: 15px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  background: linear-gradient(135deg, #007bff 0%, #00d2ff 100%);
+  box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
+  transition: transform 0.2s, box-shadow 0.2s;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 50px ;
+  margin-top: -10px;
+}
+
+.boton_añadir:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(0, 123, 255, 0.6);
+}
+
+.boton_añadir:active {
+  transform: translateY(1px);
+}
